--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "rollup": "^4.35.0"
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "rollup": "^4.35.0",
+    "rollup-plugin-import-css": "^3.5.8"
   }
 }
